--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <p>导入密钥：本源的GPG公钥是：36DEC584EEFF525810EEBFA06A551B9306A56E52<p>
       <p>打开/etc/pacman.conf，添加以下内容：</p>
       <p>[yukati]</p>
-      <p>Server = "https://high20212021.github.io/$arch"</p>
+      <p>Server = "http://yukati.yuqios.top/$arch"</p>
       <p><b>本站目前只提供aarch64的包</b><p>
   </body>
 </html>
