--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <h2>使用此源</h2>
       <p>导入密钥：本源的GPG公钥是：36DEC584EEFF525810EEBFA06A551B9306A56E52<p>
       <p>打开/etc/pacman.conf，添加以下内容：</p>
-      <p>[yukati]</p>
-      <p>Server = http://yukati.yuqios.top/$arch</p>
+      <iframe>
+        [yukati]
+        Server = http://yukati.yuqios.top/$arch
+      </iframe>
       <p><b>本站目前只提供aarch64的包!你可以自行贡献!</b><p>
   </body>
 </html>
