--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h3>注意事项</h3>
       <p>本站目前唯一维护人只提供aarch64架构的包，其他包请自行贡献！</p>
       <h3>导入密钥</h3>
-      <p>本源的GPG公钥是：</p>
+      <p>本源主要维护者的GPG公钥是：</p>
       <textarea rows="1" cols="40" readonly style="resize: none;">
-36DEC584EEFF525810EEBFA06A551B9306A56E52
+CF8CA6951AC8971BF6A36345DFC3912A9E825F1A
       </textarea>
       <h3>如何添加源</h3>
       <p>打开/etc/pacman.conf，在里面添加如下内容：</p>
@@ -25,5 +25,6 @@
 [yukati]
 Server = http://yukati.yuqios.top/$arch
       </textarea>
+      <a href="https://github.com/high20212021/ykt-archlinux-repo/issues">报告错误</a>
   </body>
 </html>
