--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ CF8CA6951AC8971BF6A36345DFC3912A9E825F1A
       <textarea rows="4" cols="40" readonly style="resize: none;">
 [yukati]
 Server = http://yukati.yuqios.top/$arch
-      </textarea>
+      </textarea><br>
       <a href="https://github.com/high20212021/ykt-archlinux-repo/issues">报告错误</a>
   </body>
 </html>
