--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ CF8CA6951AC8971BF6A36345DFC3912A9E825F1A
       <p>打开/etc/pacman.conf，在里面添加如下内容：</p>
       <textarea rows="4" cols="40" readonly style="resize: none;">
 [yukati]
-Server = http://yukati.yuqios.top/$arch
+Server = https://high20212021.github.io/$arch
       </textarea><br>
-      <a href="https://github.com/high20212021/ykt-archlinux-repo/issues">报告错误</a>
+      
   </body>
 </html>
