--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ CF8CA6951AC8971BF6A36345DFC3912A9E825F1A
 [yukati]
 Server = https://high20212021.github.io/$arch
       </textarea><br>
-      <a href="https://evolution-host.com/free-vps.php"><p>Free VPS?Here!</p></a>
+      <a href="http://t.me/auroradeveloperscommunity"><p>We Telegram Chat</p></a>
   </body>
 </html>
