--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Yukati's ArchLinux Repo</title>
+    <title>Yukari's ArchLinux Repo</title>
     <style>
       body {
         background-color: #FADADD;
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <h1>Yukati's ArchLinux Repo</h1>
+    <h1>Yukari's ArchLinux Repo</h1>
     <hr>
     <h2>使用此源</h2>
       <h3>注意事项</h3>
@@ -25,6 +25,6 @@ CF8CA6951AC8971BF6A36345DFC3912A9E825F1A
 [yukati]
 Server = https://high20212021.github.io/$arch
       </textarea><br>
-      <a href="http://t.me/auroradeveloperscommunity"><p>We Telegram Chat</p></a>
+      <a href="https://t.me/asdevcommunity"><p>We Telegram Chat</p></a>
   </body>
 </html>
